fix(core/ui): layout problem on Windows/Linux
problem from commit f227a963d1417fe8f1548d5fdfd8b4fd044af925

--- a/packages/core/src/ui/ribbon/workspace-ribbon.scss
+++ b/packages/core/src/ui/ribbon/workspace-ribbon.scss
@@ -43,6 +43,11 @@
   .info-panel-tab-wrapper {
     display: none;
   }
+
+  // Hide sidbar header on Windows/Linux
+  &.typora-node .sidebar-content {
+    top: 18px;
+  }
 }
 
 /**
